--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -1,17 +1,15 @@
 ---
 layout: page
-title: Contact
+title: Contact Us
 permalink: /contact/
 image: '/images/37.jpg'
 ---
 
 <div class="form-box">
   <div class="contact-head">
-  {% if site.data.settings.contact.description %}
-    <p class="contact-description">{{site.data.settings.contact.description}}</p>
-  {% endif %}
+    <p class="contact-description">Email us at komikerosph [at] gmail [dot] com, or fill out the contact form below:</p>
   </div>
-  <form class="form" action="{% if site.data.settings.contact.email %}https://formspree.io/f/{{site.data.settings.contact.email}}{% else %}#{% endif %}" method="POST">
+  <form class="form" action="{% if site.data.settings.contact.endpoint %}https://formspree.io/f/{{site.data.settings.contact.endpoint}}{% else %}#{% endif %}" method="POST">
     <div class="form__group">
       <label class="form__label screen-reader-text" for="form-name">Your Name</label>
       <input class="form__input" id="form-name" type="text" name="name" placeholder="Your name..." required>
@@ -25,7 +23,7 @@ image: '/images/37.jpg'
       <textarea class="form__input" id="form-text" name="text" rows="4" placeholder="Your message..." required></textarea>
     </div>
     <div class="form__group">
-      <button class="button button--big" type="submit">Send Message</button>
+      <button class="button button--big" type="submit">Send!</button>
     </div>
   </form>
 </div>
