--- a/latest/index.html
+++ b/latest/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Latest
-description: Features productivity, tips, inspiration and strategies for massive profits. Find out how to set up a successful blog or how to make yours even better!
+description: Latest posts
 ---
 
 <!-- begin hero -->
