--- a/_pages/authors.html
+++ b/_pages/authors.html
@@ -16,14 +16,14 @@ permalink: /authors/
 
       <div class="row">
         {% for author in site.authors %}
-        {% assign post_count = site.posts | where:"author", author.username %}
+        {% assign post_count = site.posts | where_exp: "post", "post.authors contains author.username" %}
         <div class="col col-3 col-w-6 col-t-12 animate">
           <div class="authors__info">
             <a class="authors__image" href="{{ author.url }}"><img class="lazy" data-src="{{ author.image }}" alt="{{ author.name }}"></a>
             <div class="authors__meta">
               <h2 class="authors__name"><a class="authors__link" href="{{ author.url }}">{{ author.name }}</a></h2>
               {% if post_count.size >= 1 %}
-              <span class="authors__posts__count">{{ post_count.size }} {% if post_count.size < 2 %}Post{% else %}Posts{% endif %}</span>
+              <span class="authors__posts__count">{{ post_count.size }} {% if post_count.size < 2 %}Comic{% else %}Comics{% endif %}</span>
               {% endif %}
             </div>
             {% if author.content %}
