Remove featured posts from home page, add latest table

--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@ layout: default
 image: '/images/11.jpg'
 ---
 
-{% include section-featured-posts.html %}
+{% include section-latest-table.html %}
 
 {% include section-tags.html %}
