Rename authors to creators, update s3 paths

--- a/_pages/authors.html
+++ b/_pages/authors.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Authors
-permalink: /authors/
+title: Creators
+permalink: /creators/
 ---
 
 <!-- begin authors -->
@@ -16,10 +16,10 @@ permalink: /authors/
 
       <div class="row">
         {% for author in site.authors %}
-        {% assign post_count = site.posts | where_exp: "post", "post.authors contains author.username" %}
+        {% assign post_count = site.posts | where_exp: "post", "post.creators contains author.username" %}
         <div class="col col-3 col-w-6 col-t-12 animate">
           <div class="authors__info">
-            <a class="authors__image" href="{{ author.url }}"><img class="lazy" data-src="{{ site.s3_url }}/authors/{{ author.username }}.jpeg" alt="Photo of {{ author.name | escape }}"></a>
+            <a class="authors__image" href="{{ author.url }}"><img class="lazy" data-src="{{ site.s3_url }}/creators/{{ author.username }}.jpeg" alt="Photo of {{ author.name | escape }}"></a>
             <div class="authors__meta">
               <h2 class="authors__name"><a class="authors__link" href="{{ author.url }}">{{ author.name | escape }}</a></h2>
               {% if post_count.size >= 1 %}
