Move featured page out of build for now

--- a/latest/_pages-featured.html
+++ b/latest/_pages-featured.html
@@ -2,7 +2,7 @@
 layout: default
 title: Featured
 description: A featured list of the most interesting articles.
-permalink: /featured/
+permalink: /featured
 ---
 
 <!-- begin hero -->
