Standardize page permalinks have no trailing slashes and no image links

--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -1,8 +1,7 @@
 ---
 layout: page
 title: Contact Us
-permalink: /contact/
-image: '/images/37.jpg'
+permalink: /contact
 ---
 
 <div class="form-box">
