--- a/_pages/tag-search.html
+++ b/_pages/tag-search.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Tag Search
-permalink: /tags
+permalink: /tag-search
 ---
 {% capture site_tags %}{% for tag in site.tags %}{{ tag | first }}{% unless forloop.last %},{% endunless %}{% endfor %}{% endcapture %}
 {% assign tag_words = site_tags | split:',' | sort %}
