Update page description metadata

--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -2,6 +2,7 @@
 layout: page
 title: Contact Us
 permalink: /contact
+description: Email us or fill out the contact form below.
 ---
 
 <div class="form-box">
